--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -113,6 +113,7 @@
 @import "card-9";
 @import "card-10";
 @import "card-11";
+@import "card-12";
 @import "event-card";
 @import "event-card-2";
 @import "event-card-3";
