--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -68,6 +68,12 @@
                 margin-bottom: 15px;
                 flex: 1;
             }
+
+            &-categorisedInfo {
+                .c-cards-view__media {
+                    display: none;
+                }
+            }
         }
         &__media {
             position: relative;
