--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -71,7 +71,7 @@
 
             &-categorisedInfo {
                 .c-cards-view__media {
-                    display: none;
+                    display: none !important;
                 }
             }
         }
