--- a/static/sass/cards/_acme-card.scss
+++ b/static/sass/cards/_acme-card.scss
@@ -67,9 +67,10 @@
 
     &__container {
         height: 100%;
-
         &-categorisedInfo {
-            display:none;
+            .acme-c-cards-view__media {
+                display:none;
+            }
         }
     }
 
