--- a/partials/panels/section-02.twig
+++ b/partials/panels/section-02.twig
@@ -7,7 +7,7 @@
         <div class="u-generic-topBorder "></div>
         <div class="c-page-head c-page-head-xs">
             <div class="u-heading__large u-heading__large-xs u-pr--6">{{title}}</div>
-            {% if LinkHide !='false' %}
+            {% if linkShow %}
                 <a href="{{link}}" class="c-page-head__link">View all</a>
             {% endif %}
         </div>
