--- a/partials/panels/section-11.twig
+++ b/partials/panels/section-11.twig
@@ -14,7 +14,7 @@
         </div>
         <div class="c-page-head c-page-head-xs {{colorInverse}}">
             <div class="u-heading__large u-heading__large-xs u-pr--6">{{title}}</div>
-            {% if LinkShow is defined and LinkShow is not empty %}
+            {% if linkShow %}
                 <a href="{{link}}" class="c-page-head__link">View all</a>
             {% endif %}
         </div>
