--- a/render.twig
+++ b/render.twig
@@ -43,7 +43,7 @@
         articles        : feedArr,
         link            : config.link is defined ? config.link : blogLink,
         title           : config.title is defined ? config.title : '',
-        LinkHide        : config.LinkHide is defined ? config.LinkHide : '',
+        linkShow        : config.linkShow is defined and config.linkShow == false ? false : true,
         dev             : dev,
         site            : site,
         networkData     : networkData,
@@ -53,7 +53,6 @@
         timeSuppress    : config.timeSuppress is defined ? config.timeSuppress : false
     } %}
 
-    {{_AppHelper.printArray(LinkHide)}}
 
     {% if config.template_params is defined and config.template_params | length > 0  %}
         {% set params = params | merge(config.template_params) %}
