remove important from listing article color

--- a/static/sass/cards/_acme-card-10.scss
+++ b/static/sass/cards/_acme-card-10.scss
@@ -47,7 +47,7 @@
             b,
             u,
             a {
-                color: $greyish !important;
+                color: $greyish;
                 font-family: $primaryFont !important;
                 @include font-size(16);
 
