--- a/partials/_article-property.twig
+++ b/partials/_article-property.twig
@@ -20,9 +20,14 @@
 
 {% endif %}
 
-{% set listingType = 'For Sale' %}
-{% if params.additionalInfo.listing_type != 'buy' %}
-    {% set listingType = 'For Rent' %}
+{% set listingType = params.category %}
+
+{% if params.additionalInfo.listing_type != '' %}
+    {% if params.additionalInfo.listing_type == 'buy' %}
+        {% set listingType = 'For Sale' %}
+    {% else %}
+        {% set listingType = 'For Rent' %}
+    {% endif %}
 {% endif %}
 
 
