--- a/article.twig
+++ b/article.twig
@@ -2,15 +2,17 @@
 {{ set(this, 'title', article.title) }}
 {{ this.registerLinkTag({rel:'amphtml', href:_AppHelper.getServerUrl(false)~'?amp=1'}) }}
 
+{% set log = _AppHelper.log('theme 1') %}
 {% set networkData = _Network.getNetworkData() %}
+{% set log = _AppHelper.log('theme 2') %}
 {% set blogInfo = _Blog.getBlog() %}
+{% set log = _AppHelper.log('theme 3') %}
 {% set config = _Network.getThemeConfig() %}
 
 {{ set(this, 'params', {
     "config": config,
     "networkData": networkData
 }) }}
-
 
 {% set themeColor = "#4A90E2" %}
 {% if networkData['styling']['colours']['primaryColor'] is defined %}
@@ -20,7 +22,9 @@
 {% set relatedArticles = [] %}
 {% set articleBlog = article.blog.title | lower %}
 
+{% set log = _AppHelper.log('theme 4') %}
 {% set articleBlogInfo = _Blog.getBlog({'guid':article.blog['guid']}) %}
+{% set log = _AppHelper.log('theme 5') %}
 
 
 {% set cropped = true %}
@@ -88,6 +92,7 @@
 
 
 
+{% set log = _AppHelper.log('theme 6') %}
 
 {% set trialToggle = false %}
 
@@ -129,6 +134,7 @@
         {% endif %}
     {% endif %}
     
+{% set log = _AppHelper.log('theme 7') %}
     {% set cacheKey = "articleRecent_articlePage" %}
     {% set recentArticles = getCache(cacheKey) %}
     {% if (recentArticles is empty) %}
@@ -144,6 +150,7 @@
 
 
 
+{% set log = _AppHelper.log('theme 8') %}
     {% set cacheKey = "articlePopular_articlePage" %}
     {% set popularArticles = getCache(cacheKey) %}
     {% if (popularArticles is empty) %}
@@ -160,6 +167,7 @@
 {% endif %}
 
 
+{% set log = _AppHelper.log('theme 9') %}
 
 
 {% set watermark = false %}
