--- a/forgot-password.twig
+++ b/forgot-password.twig
@@ -2,39 +2,40 @@
 {% set config       = _Network.getThemeConfig() %}
 
 {{this.registerJs('AuthController.forgotPassword()')}}
-<div class="login-page">
-    <div class="container">
-        <div class="tab-content forget_password">
+
+<section class="container u-margin-top-100 u-margin-bottom-100 auth_wrapper">
+    <div class="row u-flex-center">
+        <div class="col-12">
+            <div class="c-page-head c-page-head-xs vertical">
+                <div class="u-heading__large--d2 text-center">Forgot Password</div>
+                <p class="sub-heading">Please enter your {{_Network.getNetworkTitle()}} username or Email address below to get a reset password link.</p>
+            </div>
             <div class="row">
-                <div class="col-12 col-lg-7" id="login-social">
-                    <h3 class="sub-heading">Forgot Password</h3>
-                    <p class="helper-text">Please enter your {{_Network.getNetworkTitle()}} username or Email address below to get a reset password link.</p>
-                    <div class="WriteAnArticleForm fullWidth">
-                        <form id="forgotPasswordForm" class="form-horizontal" action="{{_AppHelper.getForgotPasswordUrl()}}" method="post" autocomplete="off">
-                            <input type="hidden" name="_csrf" value="{{_AppHelper.getCsrfToken()}}" /> 
-                            {% if errors | length > 0 %}
-                                <div class="alert alert-danger alert-dismissible fade in" role="alert">
-                                    <button class="close" aria-label="Close" data-dismiss="alert" type="button"><span aria-hidden="true">×</span></button>
-                                    {% for errorArr in errors %}
-                                        {% for error in errorArr %}
-                                            {{error}}
-                                        {% endfor %}
+                <div class="col-12 col-md-6 mx-auto">
+                    <form id="forgotPasswordForm" class="login-form active" action="{{_AppHelper.getForgotPasswordUrl()}}" method="post" autocomplete="off">
+                        
+                        <input type="hidden" name="_csrf" value="{{_AppHelper.getCsrfToken()}}" /> 
+                        {% if errors | length > 0 %}
+                            <div class="alert alert-danger alert-dismissible fade in" role="alert">
+                                <button class="close" aria-label="Close" data-dismiss="alert" type="button"><span aria-hidden="true">×</span></button>
+                                {% for errorArr in errors %}
+                                    {% for error in errorArr %}
+                                        {{error}}
                                     {% endfor %}
-                                </div>
-                            {% endif %}
-                            <div class="controls-full">
-                                <input type="text"  class="form-control" name="email" placeholder="{{_Network.getNetworkTitle()}} username or Email Address">
+                                {% endfor %}
                             </div>
-                            <button type="submit" class="btn btn-success forget_btn" name="forget-password-button">Submit</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-12 offset-lg-1 col-lg-4">
-                    {% if config['inventory']['adSpace']['hpage'][0] is defined %}
-                        <div class="j-adslot" id="{{config['inventory']['adSpace']['hpage'][0]}}" data-adshape="hpage"></div>
-                    {% endif %}
+                        {% endif %}
+
+                        <div class="signin-modal__form-group">
+                            <div class="signin-modal__form-group__label">
+                                <label class="signin-modal__form-group__label-text">Email address</label>
+                            </div>
+                            <input  class="login-form__input" type="text" name="username" placeholder="{{_Network.getNetworkTitle()}} username or Email Address" value="" /> 
+                        </div>
+                        <button type="submit" class="c-button c-button--inline  c-button--lightBlue w-100 forget_btn" name="forget-password-button">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
