--- a/reset-password.twig
+++ b/reset-password.twig
@@ -3,22 +3,29 @@
 {{this.registerJs('AuthController.resetPassword()')}}
 {% set config       = _Network.getThemeConfig() %}
 
-<div class="login-page u-margin-top-50 u-margin-bottom-80">
-    <div class="container">
-        <div class="row c-reset-password">
-            <div class="col-12 col-lg-7" id="login-social">
-                <h3 class="u-heading__large u-heading__large-xs">Set your password</h3>
-
-                <div class="c-generic-form u-margin-top-30">
-                    <form id="resetPasswordForm" class="" action="" method="post">
-                        <input type="hidden" name="_csrf" value="{{_AppHelper.getCsrfToken()}}" />
-                        <div class="c-generic-form__group m-width400">
-                            <label class="c-generic-form__group-label-text">New password</label>
-                            {{_AppForm.input({type:'password', name: 'password', value: '', id: 'password', class: 'form-control', placeholder: 'New Password'}) | raw }}
+<section class="container u-margin-top-100 u-margin-bottom-100 auth_wrapper">
+    <div class="row u-flex-center">
+        <div class="col-12">
+            <div class="c-page-head c-page-head-xs vertical">
+                <div class="u-heading__large--d2 text-center">Set your password</div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 mx-auto">
+                    <form id="resetPasswordForm" class="login-form active" action="" method="post" autocomplete="off">
+                        
+                        <input type="hidden" name="_csrf" value="{{_AppHelper.getCsrfToken()}}" /> 
+                        
+                        <div class="signin-modal__form-group">
+                            <div class="signin-modal__form-group__label">
+                                <label class="signin-modal__form-group__label-text">New password</label>
+                            </div>
+                            {{_AppForm.input({type:'password', name: 'password', value: '', id: 'password', class: 'form-control login-form__input', placeholder: 'New Password'}) | raw }}
                         </div>
-                        <div class="c-generic-form__group m-width400">
-                            <label class="c-generic-form__group-label-text">Verify new password</label>
-                            {{_AppForm.input({type:'password', name: 'verifypassword', value: '', class: 'form-control', placeholder: 'Verify Password'}) | raw }}
+                        <div class="signin-modal__form-group">
+                            <div class="signin-modal__form-group__label">
+                                <label class="signin-modal__form-group__label-text">Verify new password</label>
+                            </div>
+                            {{_AppForm.input({type:'password', name: 'verifypassword', value: '', class: 'form-control login-form__input', placeholder: 'Verify Password'}) | raw }}
                         </div>
 
                         {% if errors | length > 0 %}
@@ -31,15 +38,11 @@
                             </ul>
                         {% endif %}
 
-                        {{_AppForm.button({type:'submit', name: 'resetPassword', class: 'forget_btn c-button c-button--fwidth c-button--radius c-button--blue', label:'Reset password'}) | raw }}
+
+                        {{_AppForm.button({type:'submit', name: 'resetPassword', class: 'forget_btn c-button c-button--inline  c-button--lightBlue w-100', label:'Reset password'}) | raw }}
                     </form>
                 </div>
             </div>
-            <div class="col-12 offset-lg-1 col-lg-4">
-                {% if config['inventory']['adSpace']['hpage'][0] is defined %}
-                    <div class="j-adslot" id="{{config['inventory']['adSpace']['hpage'][0]}}" data-adshape="hpage"></div>
-                {% endif %}
-            </div>
         </div>
     </div>
-</div>
+</section>
