--- a/layout-classifieds.twig
+++ b/layout-classifieds.twig
@@ -607,7 +607,7 @@
                 cardType        : "acme-",
                 lightbox        : "{{contentType}}",
                 name            : 'section-load', //name of the search button
-                card_class      : '{{cardClasses}} col-12 acme-col-lg-4',
+                card_class      : ' col-12 acme-col-lg-4',
                 non_pinned      : {{articleCount}}
             };
 
