--- a/layout-classifieds.twig
+++ b/layout-classifieds.twig
@@ -233,7 +233,7 @@
                                     imageSize: {width: 285, height: 192},
                                     cardType: "acme-",
                                     contentType: contentType,
-                                    containerClass: "{{cardClasses}}"
+                                    containerClass: cardClasses
                                 }) | raw}}
                                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                             </div>
@@ -607,7 +607,7 @@
                 cardType        : "acme-",
                 lightbox        : "{{contentType}}",
                 name            : 'section-load', //name of the search button
-                card_class      : 'acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop col-12 acme-col-lg-4',
+                card_class      : cardClasses ~ ' col-12 acme-col-lg-4',
                 non_pinned      : {{articleCount}}
             };
 
