--- a/layout-classifieds.twig
+++ b/layout-classifieds.twig
@@ -25,6 +25,9 @@
 {# This page can either render panels or entire section work of articles #}
 {% set fullPage = false %}
 {% set limit = 3 %}
+{% if config['classifieds']['new-card-style'] is defined and config['classifieds']['new-card-style'] == true %}
+    {% set limit = 2 %}
+{% endif %}
 
 {% if url.query | length > 0 %}
 
@@ -63,9 +66,13 @@
 {% endif %}
 
 {% set cardClasses = 'acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop' %}
+{% set cardClassesLoading = 'acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop acme-col-lg-4' %}
+{% set cardClassesContainer = 'acme-col-12 acme-col-md-12 acme-col-lg-4' %}
 
 {% if config['classifieds']['new-card-style'] is defined and config['classifieds']['new-card-style'] == true %}
     {% set cardClasses = 'acme-card-2-mobile acme-card-2-tablet acme-card-2-desktop' %}
+    {% set cardClassesLoading = 'acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop acme-col-lg-2' %}
+    {% set cardClassesContainer = 'acme-col-12 acme-col-md-12 acme-col-lg-6' %}
 {% endif %}
 
 
@@ -226,7 +233,7 @@
 
                         <div class="acme-row">
                         {% for i in 0..11 if articles[i] %}
-                            <div class="acme-col-12 acme-col-md-12 acme-col-lg-4">
+                            <div class="{{cardClassesContainer}}">
                                 {{this.render('/partials/_single-article.twig', {
                                     article: articles[articleCount], 
                                     position: (articleCount+1),
@@ -430,7 +437,7 @@
             failText        : '<h2 style="font-size:24px;margin-top:25px;color:#0e215d;font-weight:400;">Sorry, we couldn\'t find what you\'re looking for.</h2>',
             after           : '</div>',
             cardType        : "acme-",
-            card_class      : 'acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop acme-col-12 acme-col-md-12 acme-col-lg-4',
+            card_class      : cardClassesLoading ~ ' acme-col-12 acme-col-md-12',
             lightbox        : "{{contentType}}"
         }); 
 
@@ -607,7 +614,7 @@
                 cardType        : "acme-",
                 lightbox        : "{{contentType}}",
                 name            : 'section-load', //name of the search button
-                card_class      : cardClasses ~ ' col-12 acme-col-lg-4',
+                card_class      : cardClassesLoading ~ ' acme-col-12 acme-col-md-12',
                 non_pinned      : {{articleCount}}
             };
 
