--- a/partials/panels/section-09.twig
+++ b/partials/panels/section-09.twig
@@ -25,6 +25,12 @@
             imageSizes: {
                 "mobile": {
                     width: 95, height: 130
+                },
+                "mobileLrg": {
+                    width: 95, height: 130
+                },
+                "tablet": {
+                    width: 95, height: 130
                 }
             },
             swap : 'false',
@@ -49,6 +55,17 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            imageSizes: {
+                "mobile": {
+                    width: 95, height: 130
+                },
+                "mobileLrg": {
+                    width: 95, height: 130
+                },
+                "tablet": {
+                    width: 95, height: 130
+                }
+            },
             swap : 'false',
             template: 'feature',
             url: altUrls[2] is defined ? networkData.defaultBlogUrl ~ altUrls[2] : ''
@@ -62,6 +79,17 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            imageSizes: {
+                "mobile": {
+                    width: 95, height: 130
+                },
+                "mobileLrg": {
+                    width: 95, height: 130
+                },
+                "tablet": {
+                    width: 95, height: 130
+                }
+            },
             swap : 'false',
             template: 'feature',
             url: altUrls[3] is defined ? networkData.defaultBlogUrl ~ altUrls[3] : ''
@@ -73,6 +101,17 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            imageSizes: {
+                "mobile": {
+                    width: 95, height: 130
+                },
+                "mobileLrg": {
+                    width: 95, height: 130
+                },
+                "tablet": {
+                    width: 95, height: 130
+                }
+            },
             swap : 'false',
             template: 'feature',
             url: altUrls[4] is defined ? networkData.defaultBlogUrl ~ altUrls[4] : ''
@@ -84,6 +123,17 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            imageSizes: {
+                "mobile": {
+                    width: 95, height: 130
+                },
+                "mobileLrg": {
+                    width: 95, height: 130
+                },
+                "tablet": {
+                    width: 95, height: 130
+                }
+            },
             swap : 'false',
             template: 'feature',
             url: altUrls[5] is defined ? networkData.defaultBlogUrl ~ altUrls[5] : ''
