--- a/render.twig
+++ b/render.twig
@@ -43,6 +43,7 @@
         articles        : feedArr,
         link            : config.link is defined ? config.link : blogLink,
         title           : config.title is defined ? config.title : '',
+        featurelisting  : config.featurelisting is defined ? config.featurelisting : '',
         linkShow        : config.linkShow is defined and config.linkShow == false ? false : true,
         dev             : dev,
         site            : site,
